@@ -1,3 +1,9 @@
+Tue Nov  7 09:56:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * performance-tests/Misc/basic_func.{h,cpp}:
+          Renamed B to BB to resolve compile problems on rtems where we
+          have also a typedef B
+
 Tue Nov  7 07:52:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/ACE.h:
